--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
             </div>
 
         <div class="pop-up-img-wrap">
-            <a href="file:///Users/angelfranco/Desktop/project9/project%204/index.html" target="_blank">
+            <a href="https://angel-franci.github.io/portfolio/project%204/index.html" target="_blank">
         <img src="project1.png" alt="project 1 front page">
         </a>
         </div>
@@ -53,7 +53,7 @@
 
         <div class="buttons">
             <button class="close1 close">close</button>
-            <a class="open-a" href="file:///Users/angelfranco/Desktop/project9/project%204/index.html" target="_blank">
+            <a class="open-a" href="https://angel-franci.github.io/portfolio/project%204/index.html" target="_blank">
                 Open Project
             </a>
             </div>
@@ -96,7 +96,7 @@
             </div>
 
             <div class="pop-up-img-wrap popup-img2">
-                <a href="file:///Users/angelfranco/Desktop/project9/project%205/index.html" target="_blank">
+                <a href="https://angel-franci.github.io/portfolio/project%205/index.html" target="_blank">
                 <img class="img1" src="project2.png" alt="project 2 front page">
                 </a>
             </div>
@@ -105,7 +105,7 @@
 
         <div class="buttons">
         <button class="close2 close">close</button>
-        <a class="open-a" href="file:///Users/angelfranco/Desktop/project9/project%205/index.html" target="_blank">
+        <a class="open-a" href="https://angel-franci.github.io/portfolio/project%205/index.html" target="_blank">
             Open Project
         </a>
         </div>
@@ -142,7 +142,7 @@
             </div>
 
             <div class="pop-up-img-wrap popup-img3">
-                <a href="file:///Users/angelfranco/Desktop/project9/project%206/index.html" target="_blank">
+                <a href="https://angel-franci.github.io/portfolio/project%206/index.html" target="_blank">
                 <img src="project3.png" alt="project 3 front page">
                 </a>
             </div>
@@ -151,7 +151,7 @@
 
         <div class="buttons">
             <button class="close3 close">close</button>
-            <a class="open-a" href="file:///Users/angelfranco/Desktop/project9/project%206/index.html" target="_blank">
+            <a class="open-a" href="https://angel-franci.github.io/portfolio/project%206/index.html" target="_blank">
                 Open Project
             </a>
             </div>
@@ -192,7 +192,7 @@
             </div>
 
             <div class="pop-up-img-wrap popup-img4">
-                <a href="file:///Users/angelfranco/Desktop/project9/project%207/index.html" target="_blank">
+                <a href="https://angel-franci.github.io/portfolio/project%207/index.html" target="_blank">
                 <img src="project4.png" alt="project 4 front page">
                 </a>
             </div>
@@ -201,7 +201,7 @@
 
         <div class="buttons">
             <button class="close4 close">close</button>
-            <a class="open-a" href="file:///Users/angelfranco/Desktop/project9/project%207/index.html" target="_blank">
+            <a class="open-a" href="https://angel-franci.github.io/portfolio/project%207/index.html" target="_blank">
                 Open Project
             </a>
             </div>
@@ -242,7 +242,7 @@
             </div>
 
             <div class="pop-up-img-wrap popup-img5">
-                <a href="file:///Users/angelfranco/Desktop/project9/project%208/index.html" target="_blank">
+                <a href="https://angel-franci.github.io/portfolio/project%208/index.html" target="_blank">
                 <img src="project5.png" alt="project 5 front page">
                 </a>
             </div>
@@ -251,7 +251,7 @@
 
         <div class="buttons">
             <button class="close5 close">close</button>
-            <a class="open-a" href="file:///Users/angelfranco/Desktop/project9/project%208/index.html" target="_blank">
+            <a class="open-a" href="https://angel-franci.github.io/portfolio/project%208/index.html" target="_blank">
             Open Project
             </a>
             </div>
