--- a/portfolio.html
+++ b/portfolio.html
@@ -419,12 +419,12 @@
                 <h4>Why I love coding</h4>
                 <p>I love coding, because the rewarding filling of completing a project and seeing the final product run is so satisfying. I love learning new frameworks, libraries, and coding tricks it's all very interesting to me. The countless possibilities of creating something lets my creativity flourish. The fact that I can open my macbook and code when ever and where ever I want is a big perk. </p>
                 <h4>Hobbies/free time</h4>
-                <p>Aside from coding I like spending my free time in the gym, running, wathcing sports, and listening to music. I'm a big Soccer, track, and Basketball fan. I enjoy going for a long run and while listening to old R&B</p>
+                <p>Aside from coding I like spending my free time in the gym, running, wathcing sports, and listening to music. I'm a big Soccer, track, and Basketball fan. I enjoy going for a long run while listening to old R&B.</p>
             </div>
 
             <div  class="secondHalf-aboutme">
                 <h4>How I found coding</h4>
-                <p>It was November and I was scrolling through youtube and saw a video about good work industries to work in and I saw front end web development. I started watching html and css videos and researching the industry and not long after a I bought a laptop and took off from there. I'm forever grateful to youtube</p>
+                <p>It was November and I was scrolling through youtube and saw a video about good work industries to work in and I saw front end web development. I started watching html and css videos and researching the industry and not long after a I bought a laptop and took off from there. I'm forever grateful to youtube.</p>
                 <h4>Why I'm a good fit</h4>
                  <p class="p-last">I am a team first person who loves to work with other people. I'm very passionate for coding, dedicated, and easy to communicate to.</p>
             </div>
