--- a/portfolio.html
+++ b/portfolio.html
@@ -426,7 +426,7 @@
                 <h4>How I found coding</h4>
                 <p>It was November and I was scrolling through youtube and saw a video about good work industries to work in and I saw front end web development. I started watching html and css videos and researching the industry and not long after a I bought a laptop and took off from there. I'm forever grateful to youtube.</p>
                 <h4>Why I'm a good fit</h4>
-                 <p class="p-last">I am a team first person who loves to work with other people. I'm very passionate for coding, dedicated, and easy to communicate to.</p>
+                 <p class="p-last">I am a team first person who loves to work with other people. I'm very passionate for coding, dedicated, and very managable.</p>
             </div>
         </div>
 
