--- a/portfolio.html
+++ b/portfolio.html
@@ -182,7 +182,7 @@
 
             <div class="popup1-list pl43">
                 <h4>Javascript</h4>
-                <p> If text boxes are empty when sent error appears letting user now to fill out required boxes </p>
+                <p> If text boxes are empty when sent error appears letting user now to fill out required boxes. </p>
             </div>
 
             <div class="popup1-list pl44">
